force-app/main/default/objects/SeasonsConfiguration__c/SeasonsConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Seasons Configuration</label>
</CustomObject>