force-app/main/default/objects/SeasonsConfiguration__c/fields/Cadence__c.field-meta.xml
<CustomField>
    <fullName>Cadence__c</fullName>
    <label>Cadence</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>