force-app/main/default/objects/SeasonsConfiguration__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Start date of the first season with selected cadence</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>